# opencrabs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  config.toml.example
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/brain/: commands.rs  mod.rs  prompt_builder.rs  tokenizer.rs
src/brain/agent/: context.rs  error.rs  service.rs
src/brain/provider/: anthropic.rs  azure.rs  openai.rs  qwen.rs  retry.rs  types.rs
src/brain/tools/: bash.rs  brave_search.rs  code_exec.rs  config_tool.rs  discord_connect.rs  discord_send.rs  exa_search.rs  glob.rs  grep.rs  http.rs  memory_search.rs  mod.rs  plan_tool.rs  plan_tool_security_tests.rs  rebuild.rs  registry.rs  slack_connect.rs  slack_send.rs  task.rs  telegram_connect.rs  telegram_send.rs  trait.rs  web3_auto_repair.rs  web3_deploy.rs  web3_report_read.rs  web3_test.rs  whatsapp_connect.rs  whatsapp_send.rs
src/channels/: factory.rs  mod.rs
src/channels/discord/: agent.rs  handler.rs
src/channels/slack/: agent.rs  handler.rs  mod.rs
src/channels/telegram/: agent.rs  handler.rs
src/channels/voice/: mod.rs  service.rs
src/channels/whatsapp/: agent.rs  handler.rs  mod.rs  sqlx_store.rs
src/cli/: commands.rs  mod.rs  ui.rs
src/config/: mod.rs  types.rs  update.rs
src/db/: mod.rs
src/discord/: agent.rs  handler.rs  mod.rs
src/docs/reference/templates/: BOOT.md  MEMORY.md  TOOLS.md
src/llm/agent/: context.rs  mod.rs  service.rs
src/llm/provider/: anthropic.rs  factory.rs  openai.rs
src/llm/tools/: bash.rs  discord_connect.rs  discord_send.rs  doc_parser.rs  memory_search.rs  mod.rs  plan_tool.rs  slack_connect.rs  slack_send.rs  task.rs  telegram_connect.rs  telegram_send.rs  trait.rs  write.rs
src/logging/: mod.rs
src/memory/: embedding.rs  mod.rs
src/patches/wacore-binary/src/: encoder.rs
src/slack/: agent.rs  handler.rs
src/telegram/: agent.rs  handler.rs  mod.rs
src/tui/: app.rs  events.rs  onboarding.rs  onboarding_render.rs  render.rs
src/utils/: mod.rs
