[package]
name = "opencrabs"
version = "0.1.4"
edition = "2024"
authors = ["OpenCrabs Team"]
license = "FSL-1.1-MIT"
description = "High-performance terminal AI orchestration agent for software development"
repository = "https://github.com/adolfousier/opencrabs"
keywords = ["ai", "terminal", "assistant", "llm", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
# Async Runtime
tokio = { version = "1.43", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
async-trait = "0.1"
pin-project = "1.1"

# CLI Framework
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
clap_complete = "4.5"

# TUI
ratatui = { version = "0.30", features = ["all-widgets"] }
crossterm = { version = "0.29", features = ["event-stream"] }
tui-textarea = "0.7"
tui-tree-widget = "0.24"
ratatui-image = "10.0"
viuer = "0.11"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
toml = "0.8"

# Configuration
config = "0.15"
dirs = "6.0"
dotenvy = "0.15"
shellexpand = "3.1"

# HTTP & LLM Clients
reqwest = { version = "0.12", features = ["json", "native-tls", "stream"], default-features = false }
async-openai = { version = "0.32", optional = true }
aws-sdk-bedrockruntime = { version = "1.75", optional = true }

# Provider Registry (Crabrace - replaces Catwalk)
crabrace = "0.1.0"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"
color-eyre = "0.6"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
glob = "0.3"
ignore = "0.4"
which = "8.0"
shell-words = "1.1"
notify = { version = "8.2", features = ["serde"] }
git2 = "0.20"
rand = "0.9"
urlencoding = "2.1"

# Syntax & Parsing
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
tree-sitter = "0.25"
pulldown-cmark = "0.13"

# LSP
tower-lsp = "0.20"
lsp-types = "0.97"

# Concurrent Data Structures
dashmap = "6.1"
parking_lot = "0.12"
once_cell = "1.20"
arc-swap = "1.7"

# Security
zeroize = { version = "1.8", features = ["derive"] }
keyring = "3.6"

# Misc
bytes = "1.9"
mime = "0.3"
base64 = "0.22"

# Document Parsing
pdf-extract = "0.10"
zip = "6.0"
quick-xml = "0.37"

[dev-dependencies]
rstest = "0.25"
proptest = "1.6"
mockall = "0.13"
criterion = { version = "0.5", features = ["html_reports"] }
insta = { version = "1.42", features = ["json", "yaml"] }
tempfile = "3.25"
tokio-test = "0.4"

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
# Profiling (Unix-only - not supported on Windows)
pprof = { version = "0.15", features = ["flamegraph", "frame-pointer"], optional = true }

[features]
default = []
# Profiling feature enables pprof on Unix only (no-op on Windows)
profiling = []
openai = ["async-openai"]
aws-bedrock = ["aws-sdk-bedrockruntime"]
all-llm = ["openai", "aws-bedrock"]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release-small]
inherits = "release"
opt-level = "z"
strip = true

[[bin]]
name = "opencrabs"
path = "src/main.rs"

# Benchmarks
[[bench]]
name = "database"
harness = false
path = "src/benches/database.rs"

# [[bench]]
# name = "llm_processing"
# harness = false
# path = "src/benches/llm_processing.rs"
